samples/_failures_safe/1761514837_19864f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a267695b.c: In function ‘main’:
./samples/SAFE/__tmp_a267695b.c:155:23: error: expected declaration or statement at end of input
  155 |     comp_type = (enum compression_type)type_input;
      |                       ^~~~~~~~~~~~~~~~
